# DV-Admin

./: .gitignore  AGENTS.md  README.md  compose.yaml  connect.py  init_v2.sql  jumpserver.conf  jumpserver.conf.dist  oa_init_v2.sql  run_server.py  server.conf  server.conf.example  service.sh  webserver.conf  webserver.conf.dist
backend/: .env.example  .env.pro  .env.test  LICENSE  README.md  TESTING.md  conftest.py  dev.sh  init_data.json  manage.py  pyproject.toml  pytest.ini  service.sh
backend/drf_admin/: settings.py  settings_helpers.py  settings_test.py  urls.py  wsgi.py
backend/drf_admin/apps/information/: apps.py  tests.py  urls.py
backend/drf_admin/apps/information/serializers/: centre.py
backend/drf_admin/apps/information/views/: centre.py
backend/drf_admin/apps/oauth/: test_helpers.py  test_home.py  test_login.py  test_refresh_token.py  test_session.py  tests.py  urls.py  utils.py
backend/drf_admin/apps/oauth/serializers/: token_serializers.py
backend/drf_admin/apps/oauth/views/: home.py  oauth.py
backend/drf_admin/apps/system/: README.md  apps.py  models.py  models_log.py  models_notice.py  signals.py  test_departments.py  test_dict_items.py  test_dicts.py  test_health.py  test_helpers.py  test_logs.py  test_media_urls.py  test_menus.py  test_notices.py  test_roles.py  tests.py  tests_password_crypto.py  urls.py
backend/drf_admin/apps/system/filters/: users.py
backend/drf_admin/apps/system/migrations/: 0001_initial.py  0002_alter_dictitems_options_remove_dictitems_sort_and_more.py  0003_notices.py  0004_operationlog.py  0005_roles_data_scope_data_depts.py
backend/drf_admin/apps/system/serializers/: departments.py  dicts.py  logs.py  notices.py  permissions.py  roles.py  users.py
backend/drf_admin/apps/system/services/: __init__.py  data_scope.py  field_permission.py
backend/drf_admin/apps/system/views/: departments.py  dicts.py  health.py  logs.py  (+4 more)
backend/drf_admin/common/: models.py  redis.py
backend/drf_admin/utils/: exceptions.py  filterset.py  middleware.py  models.py  pagination.py  permissions.py  request_id.py  routers.py  swagger_schema.py  test_api_capability_contracts.py  test_api_field_contracts.py  test_docs_validator_structure.py  test_field_permission_contracts.py  test_model_contract_validator_structure.py  test_model_contracts.py  test_rbac_permission_contract.py  test_request_id.py  test_response_contract.py  test_runtime_api_contracts.py  test_settings_deprecations.py  test_settings_helpers.py  views.py
backend/drf_admin/utils/runtime_api_contracts/: helpers.py  test_dict_write_contracts.py  test_notice_write_contracts.py  test_read_contracts.py  test_write_contracts.py
fastapi/: .coverage  .env.example  Makefile  README.md  TESTING.md  pyproject.toml
fastapi/app/: __init__.py  main.py
fastapi/app/api/: __init__.py  deps.py  deps_tokens.py  health.py  pagination.py
fastapi/app/api/v1/: README.md  __init__.py
fastapi/app/core/: __init__.py  cache.py  cache_backend.py  cache_keys.py  cache_memory.py  cache_redis.py  cache_service.py  config.py  error_codes.py  exceptions.py  redis.py  security.py  security_validator.py
fastapi/app/db/: __init__.py  django_fixture_reader.py  django_import_config.py  django_import_errors.py  django_import_relations.py  django_import_state.py  django_import_writer.py  import_django_data.py  init_db.py  verify_import.py
fastapi/app/db/models/: __init__.py  base.py  oauth.py  oauth_user_access.py  system.py  system_dept.py  system_dict.py  system_log.py  system_notice.py  system_permission.py
fastapi/app/middleware/: __init__.py  logging_middleware.py  slow_query_middleware.py
fastapi/app/middleware/request_logging/: __init__.py  body.py  client.py  constants.py  middleware.py
fastapi/app/middleware/slow_query/: __init__.py  constants.py  database.py  request.py
fastapi/app/schemas/: __init__.py  base.py  oauth.py  system.py  system_common.py  system_dept.py  system_dict.py  system_log.py  system_menu.py  system_notice.py  system_role.py  system_roles.py  system_user.py
fastapi/app/services/: captcha_cache.py  captcha_service.py  token_blacklist.py  token_blacklist_compat.py  token_blacklist_keys.py  token_blacklist_memory.py  token_blacklist_records.py
fastapi/app/services/system/: data_scope.py  dept_service.py  dict_cache.py  dict_item_flat_service.py  dict_item_helpers.py  dict_item_serializers.py  dict_item_service.py  dict_service.py  dict_type_service.py  field_permission.py  log_serializers.py  log_service.py  log_stats_helpers.py  log_time.py  menu_service.py  notice_read_helpers.py  notice_serializers.py  notice_service.py  notice_time.py  role_serializers.py  role_service.py  user_service.py
fastapi/app/utils/: file.py  logger.py
fastapi/docker/: Dockerfile  docker-compose.yml  nginx.conf
fastapi/scripts/: dev.sh
fastapi/tests/: conftest.py  dict_service_fixtures.py  log_service_fixtures.py  notice_service_fixtures.py  role_service_fixtures.py  test_api_capability_contracts.py  test_api_contracts.py  test_api_field_contracts.py  test_cache.py  test_cache_keys.py  test_cache_memory.py  test_cache_redis.py  test_cache_redis_connection.py  test_cache_redis_delete_clear.py  test_cache_redis_read_write.py  test_cache_service.py  test_captcha.py  test_captcha_service.py  test_config.py  test_deps_tokens.py  test_dept_service.py  test_depts.py  test_dict_items.py  test_dict_service.py  test_dict_service_dict_mutation.py  test_dict_service_dict_query.py  test_dict_service_dicts.py  test_dict_service_item_flat.py  test_dict_service_item_mutation.py  test_dict_service_item_query.py  test_dict_service_items.py  test_dicts.py  test_exceptions.py  test_field_permission_contracts.py  test_file_utils.py  test_files.py  test_health.py  test_health_database.py  test_health_endpoints.py  test_health_readiness.py  (+70 more)
fastapi/tests/fixtures/: client.py  database.py  permissions.py
fastapi/tests/runtime_api_contracts/: helpers.py  pagination_fixtures.py  test_dict_write_contracts.py  test_notice_write_contracts.py  test_read_and_file_contracts.py  test_write_contracts.py
(+759 files in other folders)
